argocd/projects/media/apps/plex/base/plex.statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
    name: plex
    labels:
        app: plex
spec:
    replicas: 1
    serviceName: plex
    selector:
        matchLabels:
            app: plex
    template:
        metadata:
            name: plex
            labels:
                app: plex
        spec:
            containers:
            - name: plex
              image: ghcr.io/linuxserver/plex:1.41.0
              resources:
                requests:
                  cpu: 100m
                  memory: 100Mi
                limits:
                  cpu: '4'
                  memory: 2Gi
              ports:
              - containerPort: 32400
                protocol: TCP
              - containerPort: 1900
                protocol: UDP
              - containerPort: 5353
                protocol: UDP
              - containerPort: 8324
                protocol: TCP
              - containerPort: 32410
                protocol: UDP
              - containerPort: 32412
                protocol: UDP
              - containerPort: 32413
                protocol: UDP
              - containerPort: 32414
                protocol: UDP
              - containerPort: 32469
                protocol: TCP
              

              volumeMounts:
              - mountPath: /data
                name: media
              - mountPath: /config
                name: config

            volumes:
            - name: media
              persistentVolumeClaim:
                claimName: media
            - name: config
              persistentVolumeClaim:
                claimName: plex-config
